<resources>
    <string name="app_name">HealthManage</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_success">验证码已发送，请耐心等待</string>
    <string name="no_account">还没有账号?</string>
    <string name="activity_login_phone_hint">"请输入您的手机号码"</string>
    <string name="activity_login_password_hint">"请输入您的账号密码"</string>
    <string name="activity_login_forget">"忘记密码？"</string>
    <string name="activity_login_register">去注册＞</string>
    <string name="activity_login_login">"登录"</string>
    <string name="activity_login_remember_password">"记住密码"</string>
    <string name="activity_login_code">验证码登录</string>
    <string name="activity_login_password">密码登录</string>
    <string name="activity_login_area_code">+86</string>
    <string name="activity_login_other">其它登录方式</string>
    <string name="activity_login_profession_manager">"健康管理师"</string>
    <string name="activity_login_profession_nutritionist">"健康营养师"</string>
    <string name="activity_login_profession_doctor">"健康医师"</string>
    <string name="activity_register_phone">"输入手机号"</string>
    <string name="activity_register_countdown">"获取验证码"</string>
    <string name="activity_register_verification_code">"请输入您的验证码"</string>
    <string name="activity_register_password">"请输入6-20位数字与字母组合"</string>
    <string name="activity_register_register">"确认注册"</string>
    <string name="activity_register_title">"注册账号"</string>
    <string name="activity_reset_password_new_password">"请输入新密码"</string>
    <string name="activity_reset_password_confirm">"确认重置"</string>
    <string name="activity_main_toolbar_title">"主页"</string>
    <string name="activity_register_toolbar_title">"注册"</string>
    <string name="activity_reset_password_title">"设置新密码"</string>
    <string name="activity_qualification_tip">以下资料仅用于资质认证，请放心填写真实信息，我们将严格保密！</string>
    <string name="activity_qualification_profession_tip">持有医师执业证且在医院工作的健康营养师/健康管理师/健康护理师/健康医师，请选择医师类别进行认证。
    </string>
    <string name="activity_qualification_title_name">姓&#8195;&#8195;名</string>
    <string name="activity_qualification_title_IdCard">身份证号</string>
    <string name="activity_qualification_title_profession">职&#8195;&#8195;业</string>
    <string name="activity_qualification_title_department">科&#8195;&#8195;室</string>
    <string name="activity_qualification_title_title">职&#8195;&#8195;称</string>
    <string name="activity_qualification_title_hospital">所属医院</string>
    <string name="activity_qualification_hint_name">请输入真实姓名</string>
    <string name="activity_qualification_hint_IdCard">请输入正确的身份证号</string>
    <string name="activity_qualification_hint_department">请选择您的科室</string>
    <string name="activity_qualification_hint_title">请选择您的职称</string>
    <string name="activity_qualification_hint_hospital">请选择您的工作单位</string>
    <string name="activity_search_department">搜索科室</string>
    <string name="activity_main_bottom_home">"首页"</string>
    <string name="activity_main_bottom_business">"业务服务"</string>
    <string name="activity_main_bottom_education">"教育培训"</string>
    <string name="activity_main_bottom_mall">"商城"</string>
    <string name="activity_main_bottom_my">"我的"</string>
    <string name="dropdown_more">"更多"</string>
    <string name="fragment_home_warning">"健康异常"</string>
    <string name="fragment_home_message">"咨询信息"</string>
    <string name="fragment_home_plan">"工作计划"</string>
    <string name="fragment_home_famous_doctors">"名医堂"</string>
    <string name="fragment_home_health_club">"健康荟"</string>
    <string name="fragment_home_service_provider">"服务商"</string>
    <string name="inviting_members">"邀请会员"</string>
    <string name="activity_inviting_phone">"请输入会员手机号"</string>
    <string name="activity_inviting_search">"搜索"</string>
    <string name="activity_inviting_invite">"邀请"</string>
    <string name="recyclerview_my_focus_history_data">历史数据</string>
    <string name="recyclerview_my_focus_health_manage">健康管理</string>
    <string name="activity_my_studio_approval_status_succeed">"审核通过"</string>
    <string name="activity_my_studio_approval_status_ing">"审核中"</string>
    <string name="activity_my_studio_approval_status_failure">"审核失败"</string>
    <string name="fragment_home_my_task">我的任务</string>
    <string name="cancel">"取消"</string>
    <string name="create">"创建"</string>
    <string name="update">"修改"</string>
    <string name="upload">"上传"</string>
    <string name="search">"搜索"</string>
    <string name="multiple_choice">"多选"</string>
    <string name="send">"发送"</string>
    <string name="hint_input_member_phone">"请输入会员手机号"</string>
    <string name="hint_input_member_name">"请输入会员昵称"</string>
    <string name="hint_input_search">"搜索"</string>
    <string name="my_comment">"我的评价"</string>
    <string name="member_comment">"会员评价"</string>
    <string name="tip_get_point">"如何赚取积分?"</string>
    <string name="expand">"展开"</string>
    <string name="collapse">"收起"</string>
    <string name="my_point">"我的积分"</string>
    <string name="my_order">"我的订单"</string>
    <string name="my_studio">"我的工作室"</string>
    <string name="legal_advice">"法律咨询"</string>
    <string name="my_agent">"我的代买"</string>
    <string name="my_collect">"我的收藏"</string>
    <string name="my_identity_authentication">"身份认证"</string>
    <string name="my_wallet">"我的钱包"</string>
    <string name="my_study">"我的学习"</string>
    <string name="service_center">"客服中心"</string>
    <string name="about_us">"关于我们"</string>
    <string name="advice_suggest">"建议反馈"</string>
    <string name="current_location">"当前位置:"</string>
    <string name="history_data">"历史数据"</string>
    <string name="data_compare">"数据对比"</string>
    <string name="data_analysis">"数据分析"</string>
    <string name="patrol_survey">"巡检测量"</string>
    <string name="data_report">"数据报表"</string>
    <string name="abnormal_health">"异常数据"</string>
    <string name="key_member">"重点会员"</string>
    <string name="create_task">"生成异常处理"</string>
    <string name="my_team">"我的团队"</string>
    <string name="my_business">"我的业务"</string>
    <string name="business_process">"业务处理"</string>
    <string name="personal_request">"个人请求"</string>
    <string name="information_query">"资料查询"</string>
    <string name="internal_discussion">"内部交流"</string>
    <string name="learning_training">"学习培训"</string>
    <string name="leisure_life">"休闲生活"</string>
    <string name="life_service">"生活服务"</string>
    <string name="housekeeping">"家政"</string>
    <string name="pension">"养老"</string>
    <string name="referral">"转诊"</string>
    <string name="consultation">"会诊"</string>
    <string name="prescription">"处方"</string>
    <string name="explain">"解答"</string>
    <string name="delegated_business">"委派业务"</string>
    <string name="my_lecture_hall">"我的讲堂"</string>
    <string name="product_release">"商品发布"</string>
    <string name="my_needs">"我的需求"</string>
    <string name="academic_journal">"学术期刊"</string>
    <string name="by_date">"按日期"</string>
    <string name="search_hint">"搜索我的会员"</string>
    <string name="send_to">"发送给："</string>
    <string name="task_description">"任务描述"</string>
    <string name="null_data">"暂无数据"</string>
    <string name="under_do">"正在开发中"</string>
    <string name="privacy_protection">隐私保护指引</string>
    <string name="software_agreement">软件许可及服务协议</string>
    <string name="check_new_edition">检查新版本</string>
    <string name="blood_pressure_detail">血压信息</string>
    <string name="blood_sugar_detail">血糖信息</string>
    <string name="blood_oxygen_detail">血氧信息</string>
    <string name="temperature_detail">体温信息</string>
    <string name="sport_status">运动状况</string>
    <string name="sleep_status">睡眠状态</string>
    <string name="health_report_name">健康报告名称</string>
    <string name="health_report_time">健康评价周期</string>
    <string name="hint_100">请输入不超过100字描述</string>
    <string name="Access_step_1">1.完成 "积分学习" 中的行为、学习和新手任务，即可获得相应的积分奖励；</string>
    <string name="Access_step_2">2.每日任务有完成次数上限，每天零点更新；新手任务不可重复完成。</string>
    <string name="effect_step_1">1.商品兑换：累计积分可用于商品兑换</string>
    <string name="exchange_problem_step_1">1.积分商品一旦兑换，不支持取消订单/退换；</string>
    <string name="exchange_problem_step_2">2.商品兑换库存有限，先到先得。</string>
    <string name="term_of_validity_step_1">1.积分永久有效，不清零；</string>
    <string name="term_of_validity_step_2">2.当发现用户存在其他违规/非法行为时，将清除全部积分。</string>
    <string name="exemption_explain">本积分奖励计划由保健医苑制定并保留所有的解释权和修改权。修改以积分说明为准，不做另行通知。</string>
    <string name="exp_network_exception">网络连接异常，请检查您的网络状态</string>
    <string name="exp_network_timeout">网络连接超时，请检查您的网络状态，稍后重试</string>
    <string name="exp_json_error">数据解析错误</string>
    <string name="exp_server_timeout">服务器连接超时</string>
    <string name="prescription_sign">提醒事项: \n1.处方签名应用在开处方单 医师 签名一栏 \n2.确保签名清晰可辨认 \n3.实施细则明确规定,所有在线诊断和处方必须有医师电子签名,请配合</string>
</resources>