<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="ViewModel"
            type="com.example.healthmanage.ui.fragment.my.MyViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLineGrey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_person_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_40"
            android:paddingBottom="@dimen/dp_65"
            android:background="@color/colorBlue">

            <ImageView
                android:id="@+id/avatar_img_my"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/t_doctor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/avatar_img_my"
                android:layout_marginStart="@dimen/dp_25"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_norenzheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="您好，\n欢迎来到保健医苑健康工作室"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tv_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="王斌"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_26"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="健康管理师"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toBottomOf="@id/tv_nick_name"/>

                <TextView
                    android:id="@+id/renzheng_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:background="@drawable/bg_yirenzheng"
                    android:text="已认证"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@id/tv_nick_name"
                    app:layout_constraintTop_toTopOf="@id/tv_nick_name"
                    app:layout_constraintBottom_toBottomOf="@id/tv_nick_name"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_gorenzheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_zizhirenzheng"
                android:text="资质认证 >"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/dp_14"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/iv_to_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_14"
                android:src="@drawable/img_togo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_home_gongzuo"
            android:layout_marginTop="@dimen/dp_160"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_13">

            <TextView
                android:id="@+id/tv_mypoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_point"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:drawableTop="@drawable/img_my_point"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_mywallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_wallet"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:drawableTop="@drawable/ic_my_wallet"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_myorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_order"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/colorBlack"
                android:drawableTop="@drawable/img_my_order"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_mycomment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_comment"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/colorBlack"
                android:drawableTop="@drawable/img_my_comment"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/layout_ll"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/bg_home_gongzuo">

            <TextView
                android:id="@+id/tv_shenfen_renzheng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/my_identity_authentication"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_shenfen_renzheng"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_my_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/my_wallet"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_my_wallet"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_my_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/my_study"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_my_study"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_my_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/my_agent"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_my_agent"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_my_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/my_collect"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/ic_collect"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/layout_ll1"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_home_gongzuo">

            <TextView
                android:id="@+id/tv_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/about_us"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_about_us"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_service_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/service_center"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_service_center"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_45"
                android:layout_marginEnd="@dimen/dp_25"
                android:background="@color/color_line_grey"/>

            <TextView
                android:id="@+id/tv_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/advice_suggest"
                android:textColor="@color/colorBlack"
                android:drawableStart="@drawable/img_advice"
                android:drawableEnd="@drawable/more_icon"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:drawablePadding="@dimen/dp_10"
                android:textSize="@dimen/sp_20"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_ll2"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text=" @苏州无限公司 "
            android:textSize="20sp"
            android:textColor="@color/colorTxtGrey"/>


    </RelativeLayout>
</layout>